Make basic webpage for Mongolia travel including basic HTML (heading, blockquotes, image), CSS, and Bootstrap (columns, well, background color)

--- a/vacation.html
+++ b/vacation.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <title>Vacation Site</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <title>Mongolia Vacation</title>
 </head>
 <body>
   <div class="container">
+
     <div class="jumbotron">
-      <h2>Visit Tokyo!</h2>
+      <h1>Mongolia Vacation</h1>
+      <p>Chronicles of a long overdue plan to travel to the steppe. Follow my adventures.</p>
+    </div>
+
+    <img src="http://www.hotel-r.net/im/hotel/asia/mn/mongolian-steppe-0.jpg" alt="An image of the Mongolian steppe" style="width:1100px;height:625px">
+
+    <div class="general">
+      <div class="well">
+      <p>Mongolia is a landlocked country located between China and Russia. It is a vast emptiness that links land and sky, and is one of the last few places on the planet where nomadic life is still a living tradition. Mongolia may have various geopolitical, cultural and geographical meanings. Mongolia consists of historic Outer Mongolia. The province of Inner Mongolia is geographically and politically separate and located in northern part of China yet it shares common borders with Mongolia.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+      <div class="murakami">
+        <blockquote>
+          <p class="bg-success">Dawn in Mongolia was an amazing thing. In one instant, the horizon became a faint line suspended in the darkness, and then the line was drawn upward, higher and higher. It was as if a giant hand had stretched down from the sky and slowly lifted the curtain of night from the face of the earth. It was a magnificent sight, far greater in scale...than anything that I, with my limited human faculties, could fully comprehend.</p>
+          <footer>Haruki Murakami</footer>
+        </blockquote>
+      </div>
+      </div>
+
+      <div class="col-md-4">
+      <div class="elbegdorj">
+        <blockquote>
+          <p class="bg-info">Mongolia is a country of rich and ancient heritage, unique culture and astounding natural beauty. It is a land of free and brave, peace-loving and hard-working people.</p>
+          <footer>Tsakhiagiin Elbegdorj</footer>
+        </blockquote>
+      </div>
+      </div>
+
+
+        <div class="col-md-4">
+        <div class="grossman">
+          <blockquote>
+            <p class="bg-warning">The steppe has one other unchanging characteristic: day and night, summer and winter, in foul weather or fine weather, it speaks of freedom. If someone has lost his freedom, the steppe will remind him of it.<p>
+            <footer>Vasily Grossman</footer>
+          </blockquote>
+        </div>
+        </div>
     </div>
 
   </div>
